--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -30,9 +30,9 @@
     text-shadow: 
         0 0 10px #c702fd,  /* Bright purple outer glow */
         0 0 10px #c702fd;  /* Extended glow */
-    white-space: nowrap; /* Prevent the text from wrapping to a new line */
-    letter-spacing: 2px; /* Add some spacing between letters */
-    font-weight: bold; /* Make the text bold for more clarity */
+    white-space: nowrap; 
+    letter-spacing: 2px; 
+    font-weight: bold; 
 }
 
 
@@ -187,8 +187,8 @@
 
 .feature h3 {
     margin-bottom: 10px;
-    color: #c702fd; /* Bright neon purple for the title */
-    font-size: 1.5em; /* Slightly larger title */
+    color: #c702fd; 
+    font-size: 1.5em; 
 }
 
 .feature p {
